# edinet_xbrl_prep

./: .gitignore  README.md  pyproject.toml  xbrl_analysis.ipynb
edinet_xbrl_prep/: __init__.py  edinet_api.py  fs_tbl.py  link_base_file_analyzer.py  link_base_file_analyzer_common.py  num_prep.py  requirements.txt  text_prep.py  utils.py  xbrl_parser_rapper.py
edinet_xbrl_prep/linkbase/: link_base_file_analyzer.py
edinet_xbrl_prep/parse/: xbrl_parser_rapper.py
tests/: __init__.py  test_account_list_common.py  test_integ.py  test_utils.py
